# jon-researcher

./: .gitignore  LICENSE  README.md  jon.spec  pyproject.toml  requirements.txt
docs/: researcher-flow.md
packaging/: jon_entry.py
scripts/: install.sh  uninstall.sh
src/jon_researcher/: __init__.py  cli.py  config.py  interactive.py  ollama_agent.py  ollama_discovery.py  ui.py
src/jon_researcher/research/: __init__.py  duckduckgo.py  models.py  providers.py  tools.py
tests/: test_config.py  test_ollama_agent.py  test_research_tools.py
